@@ -6,6 +6,13 @@
     * src/common.h
     Add WARN_UNUSED macro.
 
+    * src/src_sinc.c
+    Fix a segfault which occurs when memcpy is passed a bad length parameter.
+    This bug has zero security implications beyond the ability to cause a
+    program hitting this bug to exit immediately with a segfault.
+    See : http://www.mega-nerd.com/erikd/Blog/2009/Feb/14/index.html
+    Thanks to David Cournapeau for the bug report.
+
 2009-02-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/common.h src/samplerate.c
